# python-cli

./: .cspell.json  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  Makefile  pyproject.toml
.github/copier/: .copier-answers.python.yaml
.github/linters/: .ruff.toml
.github/release-please/: config.json
.github/workflows/: ci.yaml
docs/: help.md
scripts/: gen-help.sh  gen-init.sh
src/cli/: __init__.pyi  typing.py
src/cli/assets/: .cspell.json
src/cli/cmd/: __init__.pyi  _main.py
src/cli/cmd/cat/: _main.py
src/cli/cmd/cat_repo/: _cli.py  _main.py
src/cli/cmd/cspell_init/: _cli.py  _main.py
src/cli/cmd/gitignore/: __init__.pyi  _cli.py  _main.py
src/cli/cmd/gitignore/update/: __init__.pyi  _cli.py  _main.py
src/cli/cmd/pre_commit/: __init__.pyi  _cli.py  _main.py
src/cli/cmd/pre_commit/ensure_hooks_apply/: _cli.py  _main.py
src/cli/cmd/sort_toml/: __init__.pyi  _cli.py  _main.py
src/cli/utils/: __init__.pyi  _extra.py  _logging.py  _subprocess.py  _typer.py
src/cli/utils/git/: __init__.pyi  _config.py  _ls_files.py  _root.py
src/cli/utils/serialize/: _json.py  _main.py  _pydantic.py  _toml.py  _yaml.py
