[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "httpx[socks]>=0.27.2",
  "lazy-loader>=0.4",
  "loguru>=0.7.2",
  "pycomplete>=0.4.0",
  "pydantic>=2.9.2",
  "ruamel-yaml>=0.18.6",
  "tomlkit>=0.13.2",
  "typer>=0.12.5",
]
description = "Add your description here"
name = "python-cli"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.0"

[project.optional-dependencies]
pre-commit = ["pre-commit>=4.0.1", "pydantic>=2.9.2"]
sort-toml = ["taplo>=0.9.3", "toml-sort>=0.23.1"]

[project.scripts]
q = "cli.cmd:app"
sort-toml = "cli.cmd.sort_toml:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = ["icecream>=2.1.3", "marimo>=0.9.7"]
