[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "httpx[socks]>=0.27.2",
  "lazy-loader>=0.4",
  "loguru>=0.7.2",
  "pre-commit>=4.0.1",
  "pydantic>=2.9.2",
  "ruamel-yaml>=0.18.6",
  "toml-sort>=0.23.1",
  "tomlkit>=0.13.2",
  "typer>=0.12.5",
]
description = "Add your description here"
license = "MIT"
name = "python-cli"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.0"

[project.scripts]
cat-repo = "cli.cmd.cat_repo:app"
cspell-init = "cli.cmd.cspell_init:app"
gitignore = "cli.cmd.gitignore:app"
q = "cli.cmd:app"
sort-toml = "cli.cmd.sort_toml:app"

[project.urls]
"Bug Tracker" = "https://github.com/liblaf/python-cli/issues"
Changelog = "https://github.com/liblaf/python-cli/blob/main/CHANGELOG.md"
Homepage = "https://github.com/liblaf/python-cli"
Repository = "https://github.com/liblaf/python-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = ["icecream>=2.1.3", "marimo>=0.9.7"]
